--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -18,14 +18,10 @@
 }
 
 .catalog__item {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
-.catalog__item-info {
-  margin-top: 20px;
-}
-
-.catalog__item-title {
+.catalog__item-link {
   margin: 0;
   width: 80px;
   font-weight: 400;
@@ -34,26 +30,22 @@
   text-align: left;
   padding-bottom: 18px;
   line-height: 20px;
-  margin-left: 20px;
-
-  .catalog__item-link {
-    text-transform: uppercase;
-    color: #111111;
-    text-decoration: none;
-  }
+  text-transform: uppercase;
+  color: #111111;
+  text-decoration: none;
 }
 
-.catalog__item-description {
+.description-item {
   font-family: "Arial", sans-serif;
   font-size: 12px;
   margin-bottom: 23px;
   margin-left: 20px;
   min-width: 150px;
+}
 
-  .description-item__value {
-    text-align: center;
-    padding-left: 64px;
-  }
+.description-item__value {
+  text-align: center;
+  padding-left: 64px;
 }
 
 .catalog__title--more {
@@ -70,19 +62,4 @@
   margin: 0;
   margin-left: 40px;
   margin-bottom: 40px;
-}
-
-.button--purchase {
-  margin: 0 auto;
-  text-decoration: none;
-  padding: 13px 108px 12px 111px;
-}
-
-.button-grey {
-  padding: 13px 94px 12px 97px;
-  background-color: #f2f2f2;
-  margin-left: 20px;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #444444;
 }
