--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,7 +1,10 @@
-@import "content.less";
+@import "container.less";
 @import "main-navigation.less";
 @import "introduction.less";
 @import "programs.less";
 @import "features";
 @import "catalog.less";
 @import "page-footer";
+@import "button.less";
+@import "social-links";
+@import "site-list.less";
