--- a/source/less/main-navigation.less
+++ b/source/less/main-navigation.less
@@ -1,3 +1,19 @@
 .main-navigation__logo {
   padding-left: 20px;
 }
+
+@media (min-width: 768px) {
+  .main-navigation__logo {
+    padding-top: 24px;
+  }
+
+  .main-navigation__block {
+    display: flex;
+  }
+}
+
+@media (min-width: 1300px) {
+  .main-navigation__logo {
+    padding-top: 53px;
+  }
+}
