--- a/source/less/social-links.less
+++ b/source/less/social-links.less
@@ -11,3 +11,15 @@
   list-style: none;
   margin-right: 40px;
 }
+
+@media (min-width: 768px) {
+  .social-links__list {
+    margin-left: 155px;
+  }
+}
+
+@media (min-width: 1300px) {
+  .social-links__list {
+    margin-left: 300px;
+  }
+}
