--- a/source/less/container.less
+++ b/source/less/container.less
@@ -1,7 +1,20 @@
 .container {
-  margin: 0 auto;
-  width: 320px;
-  font-family: "Oswald", "Arial", sans-serif;
-  font-weight: 400;
-  color: #111111;
+  max-width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 20px;
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 30px;
+  }
+}
+
+@media (min-width: 1300px) {
+  .container {
+    max-width: 1300px;
+    padding: 0 110px;
+  }
 }
