--- a/source/less/description.less
+++ b/source/less/description.less
@@ -4,9 +4,22 @@
   margin-bottom: 23px;
   margin-left: 20px;
   min-width: 150px;
+  color: #444444;
 }
 
 .description-item__value {
   text-align: center;
   padding-left: 64px;
+}
+
+@media (min-width: 768px) {
+  .description-item {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 1300px) {
+  .description-item {
+    margin-left: 0;
+  }
 }
