--- a/source/less/introduction.less
+++ b/source/less/introduction.less
@@ -3,21 +3,54 @@
   background-repeat: no-repeat;
   color: #ffffff;
   line-height: 1;
+  min-width: 320px;
+  padding: 0;
 }
 
 .introduction__title {
+  margin: 0;
   padding-top: 29px;
+  padding-left: 38px;
   width: 250px;
   font-weight: 400;
   text-align: center;
   font-size: 36px;
   line-height: 36px;
-  margin: 0 auto;
 }
 
 .introduction__tagline {
+  margin: 0;
   padding-top: 19px;
   font-size: 14px;
   text-transform: uppercase;
   padding-left: 60px;
+}
+
+@media (min-width: 768px) {
+  .introduction__wrapper {
+    background-image: none;
+  }
+
+  .introduction__title {
+    width: 420px;
+    line-height: 60px;
+    color: #111111;
+    text-align: left;
+    font-size: 60px;
+    padding-left: 105px;
+  }
+
+  .introduction__tagline {
+    text-align: left;
+    color: #111111;
+    font-size: 20px;
+    padding-left: 105px;
+    padding-top: 48px;
+  }
+}
+
+@media (min-width: 1300px) {
+  .introduction__wrapper {
+    margin-top: 90px;
+  }
 }
