--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -1,70 +1,3 @@
-.programs__description-container {
-  width: 280px;
-  margin: 0 auto;
-  background-color: #f2f2f2;
-  padding-bottom: 22px;
-
-  &--slim::before {
-    content: "";
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    flex-shrink: 0;
-    border-radius: 50%;
-    background-color: #68b738;
-    top: 90px;
-    left: 40px;
-    z-index: 1;
-  }
-
-  &--pro::before {
-    content: "";
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    flex-shrink: 0;
-    border-radius: 50%;
-    background-color: #68b738;
-    top: 365px;
-    left: 40px;
-    z-index: 1;
-  }
-}
-
-.programs__item-title {
-  position: relative;
-  text-transform: uppercase;
-  font-size: 24px;
-  line-height: 37px;
-  padding-top: 39px;
-  font-weight: 400;
-  padding-left: 92px;
-
-  &--slim::before {
-    content: "";
-    position: absolute;
-    background-image: url("../img/icon-cat-slim.svg");
-    width: 35px;
-    height: 49px;
-    z-index: 2;
-    top: 25px;
-    left: 25px;
-    background-position: 0 0;
-  }
-
-  &--pro::before {
-    content: "";
-    position: absolute;
-    background-image: url("../img/icon-cat-pro.svg");
-    width: 67px;
-    height: 28px;
-    z-index: 2;
-    top: 37px;
-    left: 10px;
-    background-position: 0 0;
-  }
-}
-
 .programs__item-specification {
   font-family: "Arial", sans-serif;
   font-size: 14px;
@@ -84,4 +17,198 @@
 
 .programs__wrapper {
   position: relative;
+  margin-top: 22px;
+}
+
+.programs__item-title {
+  position: relative;
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 24px;
+  line-height: 37px;
+  font-weight: 400;
+  margin-left: 20px;
+  padding-top: 39px;
+}
+
+.programs__description {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #f2f2f2;
+}
+
+.programs__item::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: auto;
+  left: auto;
+  background-repeat: no-repeat;
+  background-position: top left;
+  z-index: 1;
+}
+
+.programs__item--slim::before {
+  width: 35px;
+  height: 49px;
+  margin-top: 15px;
+  margin-left: 25px;
+  background-image: url("../img/icon-cat-slim.svg");
+  background-size: 100% auto;
+}
+
+.programs__item--pro::before {
+  width: 67px;
+  height: 28px;
+  margin-top: 30px;
+  margin-left: 10px;
+  background-image: url("../img/icon-cat-pro.svg");
+  background-size: 100% auto;
+}
+
+.programs__description::before {
+  content: "";
+  position: static;
+  display: block;
+  margin: 0;
+  width: 50px;
+  height: 50px;
+  background-color: #68b738;
+  border-radius: 50%;
+  margin-top: 22px;
+  margin-left: 22px;
+}
+
+@media (min-width: 768px) {
+  .programs__item-title {
+    margin: 0;
+    font-size: 36px;
+    padding-top: 81px;
+    padding-bottom: 26px;
+    padding-left: 55px;
+  }
+
+  .programs__item-specification {
+    font-size: 16px;
+    margin: 0;
+    padding-right: 23px;
+    padding-bottom: 61px;
+    padding-left: 52px;
+  }
+
+  .programs__item {
+    position: relative;
+    display: flex;
+    background-color: #f2f2f2;
+  }
+
+  .programs__item::before {
+    right: 0;
+  }
+
+  .programs__item--slim {
+    margin-bottom: 30px;
+  }
+
+  .programs__item--slim::before {
+    width: 141px;
+    height: 194px;
+    margin: 70px 92px 0 0;
+  }
+
+  .programs__item--pro::before {
+    width: 268px;
+    height: 113px;
+    margin: 120px 27px 0 0;
+  }
+
+  .programs__item::after {
+    content: "";
+    position: static;
+    flex-shrink: 0;
+    width: 200px;
+    height: 200px;
+    margin-top: 80px;
+    margin-right: 60px;
+    background-color: #68b738;
+    border-radius: 50%;
+  }
+
+  .programs__description::before {
+    display: none;
+  }
+
+  .programs__item-following-block {
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    padding-bottom: 62px;
+    padding-left: 53px;
+  }
+
+  .programs__item-following-link {
+    padding: 0;
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 1300px) {
+  .programs__wrapper {
+    margin-top: 80px;
+  }
+
+  .programs__block {
+    display: flex;
+  }
+
+  .programs__item {
+    min-width: 570px;
+  }
+
+  .programs__item-specification {
+    padding-top: 45px;
+    padding-bottom: 36px;
+  }
+
+  .programs__item::before {
+    left: 0;
+    margin: 0;
+  }
+
+  .programs__item--slim {
+    margin: 0;
+    margin-right: 80px;
+  }
+
+  .programs__item--slim::before {
+    width: 71px;
+    height: 97px;
+    margin-left: 65px;
+    margin-top: 40px;
+  }
+
+  .programs__item--pro::before {
+    width: 134px;
+    height: 57px;
+    margin-left: 30px;
+    margin-top: 65px;
+  }
+
+  .programs__description::before {
+    content: "";
+    position: static;
+    display: block;
+    margin: 0;
+    width: 100px;
+    height: 100px;
+    background-color: #68b738;
+    border-radius: 50%;
+    margin-top: 40px;
+    margin-left: 50px;
+  }
+
+  .programs__item::after {
+    display: none;
+  }
 }
