--- a/source/less/description.less
+++ b/source/less/description.less
@@ -1,4 +1,4 @@
-.description-item {
+.description {
   font-family: "Arial", sans-serif;
   font-size: 12px;
   margin-bottom: 23px;
@@ -7,19 +7,20 @@
   color: #444444;
 }
 
-.description-item__value {
+
+.description__value {
   text-align: center;
   padding-left: 64px;
 }
 
 @media (min-width: 768px) {
-  .description-item {
+  .description {
     font-size: 16px;
   }
 }
 
 @media (min-width: 1300px) {
-  .description-item {
+  .description {
     margin-left: 0;
   }
 }
