--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -35,7 +35,7 @@
   text-decoration: none;
 }
 
-.catalog__title--more {
+.catalog__item-title--more {
   margin: 0;
   margin-top: 50px;
   font-weight: 400;
@@ -71,7 +71,7 @@
     line-height: 20px;
   }
 
-  .catalog__title--more {
+  .catalog__item-title--more {
     margin: 0;
     padding: 0;
     padding-top: 170px;
@@ -139,7 +139,7 @@
     margin-left: 10px;
   }
 
-  .catalog__title--more {
+  .catalog__item-title--more {
     margin-left: 35px;
   }
 
