--- a/source/less/social-links.less
+++ b/source/less/social-links.less
@@ -1,9 +1,10 @@
 .social-links__list {
   display: flex;
+  justify-content: center;
   padding-top: 56px;
   padding-bottom: 44px;
   margin: 0;
-  margin-left: 93px;
+  margin-left: 30px;
   padding-inline-start: 0;
 }
 
@@ -12,14 +13,13 @@
   margin-right: 40px;
 }
 
-@media (min-width: 768px) {
-  .social-links__list {
-    margin-left: 155px;
-  }
-}
-
 @media (min-width: 1300px) {
+  .social-links {
+    margin: 0;
+    width: 50%;
+  }
+
   .social-links__list {
-    margin-left: 300px;
+    margin: 0;
   }
 }
