--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -14,7 +14,6 @@
 
 .catalog__item-consistency {
   display: flex;
-  min-width: 250px;
 }
 
 .catalog__item {
@@ -23,32 +22,62 @@
 
 .catalog__item-link {
   margin: 0;
-  width: 80px;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
   text-align: left;
   padding-bottom: 18px;
-  line-height: 20px;
   text-transform: uppercase;
   color: #111111;
   text-decoration: none;
 }
 
+.catalog__item-info {
+  flex: 0 0 50%;
+}
+
+.catalog__item-info--more {
+  position: relative;
+}
+
+.catalog__item-info--more::before {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 31px;
+  height: 31px;
+  background-image: url("../img/icon-plus-mobile.svg");
+  opacity: 0.2;
+}
+
+.catalog__image-link {
+  flex: 0 0 50%;
+  max-width: 50%;
+  cursor: pointer;
+}
+
+.catalog__item-title {
+  max-width: 45%;
+  line-height: 20px;
+}
+
 .catalog__item-title--more {
-  margin: 0;
-  margin-top: 50px;
+  margin: 0 auto;
   font-weight: 400;
-  width: 250px;
-  margin-left: 50px;
-  letter-spacing: normal;
   padding-bottom: 11px;
+  padding-top: 80px;
+  text-align: center;
 }
 
 .catalog__item-description--more {
   margin: 0;
-  margin-left: 40px;
   margin-bottom: 40px;
+  text-align: center;
+  font-family: "Arial", sans-serif;
+  font-size: 12px;
 }
 
 @media (min-width: 768px) {
@@ -59,10 +88,15 @@
     margin-bottom: 74px;
   }
 
+  .catalog__item-info {
+    padding: 35px;
+  }
+
   .catalog__item-title {
-    width: 135px;
     text-align: center;
-    margin-left: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 52%;
   }
 
   .catalog__item-link {
@@ -74,20 +108,34 @@
   .catalog__item-title--more {
     margin: 0;
     padding: 0;
-    padding-top: 170px;
+    padding-top: 166px;
     padding-bottom: 28px;
-    margin-left: 70px;
+    text-align: center;
     line-height: 20px;
+    max-width: 41%;
   }
 
   .catalog__item-description--more {
     font-family: "Arial", sans-serif;
-    width: 170px;
     text-align: center;
     margin: 0;
-    margin-left: 50px;
-    padding-bottom: 70px;
+    padding-bottom: 60px;
     font-size: 16px;
+    max-width: 51%;
+  }
+
+  .catalog__item-info--more::before {
+    background-image: url("../img/icon-plus.svg");
+    width: 61px;
+    height: 61px;
+    top: 50px;
+  }
+
+  .catalog__item-info--more {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
   }
 
   .catalog__wrapper {
@@ -96,10 +144,17 @@
   }
 
   .catalog__item {
-    width: 324px;
+    display: block;
     background-color: #f2f2f2;
-    margin-right: 25px;
+    margin-top: 110px;
     padding-bottom: 50px;
+    flex: 0 0 50%;
+    max-width: 46%;
+    margin-right: 6%;
+  }
+
+  .catalog__item:nth-child(2n) {
+    margin-right: 0;
   }
 
   .catalog__item--more {
@@ -107,24 +162,31 @@
     border: solid 1px #f2f2f2;
   }
 
-  .catalog__item:nth-child(2n) {
-    margin-right: 0;
-  }
-
   .catalog__item-consistency {
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
   }
 
-  .catalog__item-info {
-    margin-left: 15px;
+  .catalog__image-link {
+    flex: 0 0 auto;
+    max-width: inherit;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+    min-height: 213px;
+    margin: -90px -40px 0;
+  }
+
+  .catalog__button-container {
+    width: 76%;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
 @media (min-width: 1300px) {
   .catalog__item {
-    width: 245px;
-    margin-right: 90px;
+    max-width: 20%;
   }
 
   .catalog__item:nth-child(2n) {
@@ -135,15 +197,11 @@
     margin-right: 0;
   }
 
+  .catalog__item-image {
+    max-width: inherit;
+  }
+
   .catalog__item-title {
-    margin-left: 10px;
-  }
-
-  .catalog__item-title--more {
-    margin-left: 35px;
-  }
-
-  .catalog__item-description--more {
-    margin-left: 20px;
+    max-width: 80%;
   }
 }
