--- a/source/less/container.less
+++ b/source/less/container.less
@@ -1,20 +1,21 @@
 .container {
-  max-width: 320px;
+  min-width: 320px;
   margin-left: auto;
   margin-right: auto;
   padding: 0 20px;
+  position: relative;
 }
 
 @media (min-width: 768px) {
   .container {
-    max-width: 768px;
+    width: 92%;
     padding: 0 30px;
   }
 }
 
 @media (min-width: 1300px) {
   .container {
-    max-width: 1300px;
     padding: 0 110px;
+    max-width: 1300px;
   }
 }
