--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -7,6 +7,10 @@
   color: #444444;
 }
 
+.programs__item-following-block {
+  padding-bottom: 22px;
+}
+
 .programs__item-following-link {
   font-size: 16px;
   text-decoration: none;
@@ -47,6 +51,10 @@
   background-repeat: no-repeat;
   background-position: top left;
   z-index: 1;
+}
+
+.programs__item--slim {
+  margin-bottom: 20px;
 }
 
 .programs__item--slim::before {
