--- a/source/less/container.less
+++ b/source/less/container.less
@@ -1,5 +1,6 @@
 .container {
-  min-width: 320px;
+  width: 100%;
+  box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
   padding: 0 20px;
@@ -8,14 +9,13 @@
 
 @media (min-width: 768px) {
   .container {
-    width: 92%;
     padding: 0 30px;
   }
 }
 
 @media (min-width: 1300px) {
   .container {
-    padding: 0 110px;
-    max-width: 1300px;
+    padding: 0 40px;
+    width: 1300px;
   }
 }
