--- a/source/less/introduction.less
+++ b/source/less/introduction.less
@@ -65,7 +65,12 @@
 
   .introduction__image {
     position: absolute;
-    top: -90px;
-    margin-left: -160px;
+    top: -70px;
+    margin-left: -200px;
+    z-index: 10;
+  }
+
+  .introduction__tagline {
+    padding-left: 80px;
   }
 }
