--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,3 +9,7 @@
 @import "social-links";
 @import "description.less";
 @import "scaffolding.less";
+@import "page-header.less";
+@import "live-example.less";
+@import "toggle.less";
+@import "cooperation.less";
