--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -96,7 +96,7 @@
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    max-width: 52%;
+    max-width: 130px;
   }
 
   .catalog__item-link {
@@ -112,16 +112,16 @@
     padding-bottom: 28px;
     text-align: center;
     line-height: 20px;
-    max-width: 41%;
+    max-width: 150px;
   }
 
   .catalog__item-description--more {
     font-family: "Arial", sans-serif;
     text-align: center;
     margin: 0;
-    padding-bottom: 60px;
+    margin-bottom: 70px;
     font-size: 16px;
-    max-width: 51%;
+    max-width: 170px;
   }
 
   .catalog__item-info--more::before {
@@ -134,8 +134,8 @@
   .catalog__item-info--more {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
+    justify-content: flex-end;
   }
 
   .catalog__wrapper {
@@ -203,5 +203,13 @@
 
   .catalog__item-title {
     max-width: 80%;
+  }
+
+  .catalog__button-container--more {
+    width: 100%;
+  }
+
+  .catalog__item-description--more {
+    margin-bottom: 75px;
   }
 }
