--- a/source/less/main-navigation.less
+++ b/source/less/main-navigation.less
@@ -78,23 +78,12 @@
     color: #111111;
   }
 
-  .main-navigation__preview a {
+  .main-navigation__link--white {
     color: #ffffff;
   }
 
-  .main-navigation__preview::after {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 50%;
-    top: 0;
-    min-height: 680px;
-    right: 0;
-    bottom: 0;
-    background-image: url("../img/index-background-desktop@1x.jpg");
-    background-color: #63a73a;
-    background-position: 90% 2px;
-    background-repeat: no-repeat;
+  .main-navigation__preview a {
+    color: #ffffff;
   }
 
   .main-navigation__link {
