--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -1,11 +1,12 @@
-.page-footer__links {
-  text-align: center;
+.page-footer {
   background-color: #f2f2f2;
+}
+
+.page-footer__links-container {
+  text-align: center;
   padding: 0;
   padding-top: 39px;
   padding-bottom: 22px;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .page-footer__partner-link {
@@ -19,12 +20,10 @@
 }
 
 @media (min-width: 768px) {
-  .page-footer__links {
+  .page-footer__links-container {
     display: flex;
     justify-content: space-between;
     padding: 0;
-    padding-left: 30px;
-    padding-right: 30px;
   }
 
   .page-footer__logo-link {
@@ -43,13 +42,5 @@
   .page-footer__partner-logo {
     padding-top: 50px;
     left: 150px;
-  }
-}
-
-@media (min-width: 1300px) {
-  .page-footer__links {
-    padding: 0;
-    padding-left: 110px;
-    padding-right: 110px;
   }
 }
