--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -195,7 +195,7 @@
 
   .live-example__price-number {
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: baseline;
     margin-left: 65px;
   }
 }
