--- a/source/less/cooperation.less
+++ b/source/less/cooperation.less
@@ -1,12 +1,10 @@
-.cooperation {
-  background-color: #ffffff;
-}
-
 .cooperation__wrapper {
   display: flex;
   justify-content: space-between;
   padding-top: 30px;
+  margin-top: 30px;
   padding-bottom: 30px;
+  background-color: #f2f2f2;
 }
 
 .cooperation__tagline-text {
@@ -43,5 +41,21 @@
 
   .cooperation__wrapper {
     padding-bottom: 60px;
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+}
+
+@media (min-width: 1300px) {
+  .cooperation__wrapper {
+    margin-left: 110px;
+    width: 570px;
+    background-color: #ffffff;
+  }
+
+  .cooperation__adress-text {
+    text-align: left;
+    padding-left: 95px;
+    width: 155px;
   }
 }
