--- a/source/less/social-links.less
+++ b/source/less/social-links.less
@@ -1,16 +1,58 @@
 .social-links__list {
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  padding-top: 56px;
-  padding-bottom: 44px;
+  align-items: center;
+  padding-bottom: 20px;
   margin: 0;
-  margin-left: 30px;
+  padding-top: 20px;
   padding-inline-start: 0;
+  border-top: 1px solid #d9d9d9;
+  border-bottom: 1px solid #d9d9d9;
 }
 
 .social-links__item {
   list-style: none;
-  margin-right: 40px;
+}
+
+.social-links__item-image {
+  fill: #666666;
+
+  &:hover {
+    fill: #68b738;
+    transition: 0.5s;
+  }
+
+  &:active {
+    fill: #68b738;
+    opacity: 0.3;
+  }
+}
+
+.social-links__item-inst {
+  margin: 0 45px;
+}
+
+@media (min-width: 768px) {
+  .social-links__list {
+    border: none;
+  }
+
+  .social-links__item-vk {
+    width: 30px;
+    height: 16px;
+  }
+
+  .social-links__item-inst {
+    width: 23px;
+    height: 23px;
+    margin: 0 30px;
+  }
+
+  .social-links__item-fb {
+    width: 14px;
+    height: 28px;
+  }
 }
 
 @media (min-width: 1300px) {
