--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -200,6 +200,10 @@
     margin-right: auto;
     margin-left: auto;
   }
+
+  .catalog__button-container--more {
+    width: 85%;
+  }
 }
 
 @media (min-width: 1300px) {
