--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -65,8 +65,8 @@
   }
 
   .page-footer__logo-image {
-    padding-top: 64px;
-    padding-bottom: 62px;
+    padding-top: 65px;
+    padding-bottom: 60px;
   }
 
   .page-footer__partner-container {
@@ -81,5 +81,11 @@
 
   .page-footer__logo-wrapper {
     padding: 0;
+  }
+}
+
+@media (min-width: 1300px) {
+  .page-footer__links-container {
+    margin-top: 30px;
   }
 }
