--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -29,6 +29,10 @@
   text-transform: uppercase;
   padding-left: 30px;
   color: #111111;
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .programs__item-following-link::after {
