--- a/source/less/style.less
+++ b/source/less/style.less
@@ -13,4 +13,6 @@
 @import "live-example.less";
 @import "toggle.less";
 @import "cooperation.less";
-@import "additional";
+@import "additional.less";
+@import "selection.less";
+@import "choice.less";
