--- a/source/less/container.less
+++ b/source/less/container.less
@@ -11,11 +11,19 @@
   .container {
     padding: 0 30px;
   }
+
+  .container-2 {
+    padding-left: 70px;
+  }
 }
 
 @media (min-width: 1300px) {
   .container {
     padding: 0 40px;
     width: 1300px;
+  }
+
+  .container-2 {
+    padding: 0 40px;
   }
 }
