--- a/source/less/cooperation.less
+++ b/source/less/cooperation.less
@@ -1,10 +1,17 @@
+.cooperation {
+  background-color: #ffffff;
+}
+
 .cooperation__wrapper {
   display: flex;
   justify-content: space-between;
   padding-top: 30px;
-  margin-top: 30px;
   padding-bottom: 30px;
   background-color: #f2f2f2;
+}
+
+.cooperation__wrapper--white {
+  background-color: #ffffff;
 }
 
 .cooperation__tagline-text {
@@ -17,6 +24,26 @@
   font-size: 14px;
   font-family: "Arial", sans-serif;
   color: #444444;
+}
+
+.cooperation__map-container {
+  position: relative;
+  display: block;
+  width: 100%;
+}
+
+.cooperation__map-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.cooperation__map iframe {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  border: none;
+  z-index: 1;
 }
 
 @media (min-width: 768px) {
@@ -43,14 +70,20 @@
     padding-bottom: 60px;
     padding-left: 70px;
     padding-right: 70px;
+    background-color: #ffffff;
   }
 }
 
 @media (min-width: 1300px) {
   .cooperation__wrapper {
-    margin-left: 110px;
-    width: 570px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 95px;
+    max-width: 570px;
+    padding-top: 60px;
     background-color: #ffffff;
+    position: absolute;
+    z-index: 2;
   }
 
   .cooperation__adress-text {
