--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -78,7 +78,27 @@
   .live-example__story-text {
     margin: 0;
     font-size: 16px;
+    line-height: 24px;
   }
+
+
+  .live-example__toggle-layout {
+    width: 100%;
+    position: relative;
+  }
+
+  .live-example__toggle-layout::before {
+    content: "";
+    position: absolute;
+    display: block;
+    left: 50%;
+    bottom: 0;
+    width: 100%;
+    height: 72%;
+    transform: translateX(-50%);
+    background: linear-gradient(to right, #f2f2f2 50%, #eaeaea 50%);
+  }
+
 
   .live-example__story {
     margin-right: 20px;
@@ -137,24 +157,38 @@
 }
 
 @media (min-width: 1300px) {
-  .live-example__title {
-    padding-top: 0;
+  .live-example {
+    position: relative;
+  }
+
+  .live-example__wrapper {
+    display: flex;
+    width: 1300px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 40px;
+    box-sizing: border-box;
   }
 
   .live-example__layout {
-    max-width: 40%;
     display: flex;
     flex-wrap: wrap;
+    padding: 0;
+  }
+
+  .live-example__toggle-layout::before {
+    width: 500%;
   }
 
   .live-example__description {
     display: flex;
     flex-wrap: wrap;
+    z-index: 2;
+    width: 450px;
   }
 
-  .live-example__wrapper {
-    display: flex;
-    justify-content: space-between;
+  .live-example__story {
+    padding: 0;
   }
 
   .live-example__story-text {
@@ -166,11 +200,12 @@
   }
 
   .live-example__statistics {
-    margin-bottom: -10px;
+    margin-bottom: -25px;
   }
 
   .live-example__statistics-layout {
     flex-wrap: wrap;
+    padding-bottom: 50px;
     width: 400px;
   }
 
@@ -180,13 +215,18 @@
 
   .live-example__statistics-wrapper {
     padding-bottom: 0;
+    margin-top: 30px;
     padding-top: 13px;
   }
 
   .live-example__price-container {
-    margin-top: 63px;
+    margin-top: 60px;
     width: 400px;
     padding: 0;
+  }
+
+  .live-example__statistics-field {
+    background-color: #f2f2f2;
   }
 
   .live-example__price {
